# xlstm_jax

./: .gitignore  LICENSE.txt  Makefile  README.md  a.py  main.py  pyproject.toml  train_xlstm.py
configs/: eval_config.yaml  train_causal_lm.yaml  train_config.yaml
configs/eval/: distil_xlstm.yaml  gemma2.yaml  mLSTM-MoE.yaml  qwen.yaml  smollm.yaml  xlstm.yaml
configs/model/: xlstm.yaml
configs/trainer/: base.yaml
notebooks/: model.ipynb
scripts/: train_xlstm.py
src/: utils.py  xlstm_block_stack.py  xlstm_lm_model.py
src/_trainer/: __init__.py
src/blocks/: xlstm_block.py
src/blocks/mlstm/: block.py  cell.py  layer.py
src/blocks/slstm/: block.py  cell.py  layer.py
src/components/: conv.py  feedforward.py  linear_headwise.py  ln.py  util.py
tests/: checkpoint.py  conversion.py  inference.py  param_init.py  utils.py
training/: arguments.py  callback.py  data.py  data_transformations.py  loss.py  state.py  tensorboard.py  trainer.py
training/utils/: array.py  module.py
xlstm_jax/: __init__.py  inference.py  mask.py  parser.py  sharding.py  utils.py  xlstm_block_stack.py  xlstm_lm_model.py
xlstm_jax/_trainer/: arguments.py  data.py
xlstm_jax/blocks/: xlstm_block.py
xlstm_jax/blocks/mlstm/: backends.py  block.py  cell.py  layer.py
xlstm_jax/blocks/slstm/: block.py  cell.py  layer.py
xlstm_jax/blocks/slstm/src/vanilla/: __init__.py  lstm.py  slstm.py
xlstm_jax/components/: conv.py  feedforward.py  init.py  linear_headwise.py  ln.py  util.py
