[project]
name = "xlstm_jax"
version = "0.1.0"
authors = [{ name = "Abdoul Majid O. Thiombiano" }]
description = "JAX/Flax port of the torch xLSTM package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chex>=0.1.89",
    "einops>=0.8.1",
    "flax>=0.10.6",
    "hydra-core>=1.3.2",
    "jax>=0.6.0",
    "jaxtyping>=0.3.2",
]

[dependency-groups]
dev = ["grain>=0.2.9", "hydra-core>=1.3.2", "optax>=0.2.4", "orbax>=0.1.9"]


[tool.setuptools]
packages = ["xlstm_jax"]
