[project]
name = "xlstm-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chex>=0.1.91",
    "dacite>=1.9.2",
    "datasets>=4.0.0",
    "einops>=0.8.1",
    "flax>=0.11.2",
    "grain>=0.2.12",
    "hydra-core>=1.3.2",
    "jax>=0.7.1",
    "matplotlib>=3.10.6",
    "optax>=0.2.5",
    "orbax>=0.1.9",
    "tensorflow>=2.20.0",
    "trackio>=0.3.2",
    "transformers>=4.56.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
