[project]
name = "xlstm-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chex>=0.1.91",
    "datasets>=4.2.0",
    "einops>=0.8.1",
    "flax>=0.12.0",
    "grain>=0.2.13",
    "hydra-core>=1.3.2",
    "jax>=0.8.0",
    "matplotlib>=3.10.7",
    "optax>=0.2.6",
    "orbax>=0.1.9",
    "tensorboard>=2.20.0",
    "tensorflow>=2.20.0",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "xprof>=2.20.7",
]
